public/css/app.css
.search-bar{
    display: flex;
    justify-content: space-between;
    width: 100%;
    padding-top: 1%;
    padding-bottom: 1%;
}

.search-input{
    margin-right: 20px;
    width: 100%;
}

.navbar-choice{
    margin-right:auto !important;
    margin-left:3% !important;
}

.nav-box {
    z-index: 1;
}

.page-box{
    width: 100%;
    height: 100%;
    padding-top: 10px;
    padding-left: 3%;
    padding-right: 3%;
    align-items: center;
}

.home-design{
    height: 80%;
    align-items: center;
    justify-content: center;
    padding: 10%;
}

/* for desktop */
.home-big-text {
    font-size: 12vw;
}

.home-small-text{
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    color: black;
    font-size: 3vw;
}

@media screen and (min-width: 961px) {
    .home-big-text {
        font-size: 7vw;
    }

    .home-small-text {
        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
        color: black;
        font-size: 1.5vw;
    }
}

.home-linked{
    display: flex;
    justify-content: center;
}

.home-linked-button{
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 1%;
    width: 300px;
    background-color: rgb(189, 189, 189);
    border-radius: 10px;
    border-color: grey;
}

.home-linked-text{
    color: black;
    margin-top: 10px;
    display: flex;
    text-align: center;
    align-items: center;
    justify-content: space-between;
    width: 90%;
}

.home-linked-text:hover{
    color: #81c408;
}


.lost-card{
    align-items: center;
    justify-content: center;
}

.lost-card-image{
    width: 100%;
    height: 100%;
}

.lost-claim{
    width: 80%;
    margin-bottom: 3%;
}

.itemPreview {
    width: 100%;
    padding-top: 20px;
}

